// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput UI Component should match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="input-number"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink="true"
      for="input-inputNumber"
    >
      Input Number
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      label="Input Number"
    >
      <input
        aria-describedby="helptext-inputNumber"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input"
        id="input-inputNumber"
        maxlength="5"
        type="text"
        value="1234567890"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-59 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-60"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="helptext-inputNumber"
      >
        A number
      </p>
    </div>
  </div>
</div>
`;

exports[`NumberInput UI Component should match snapshot when error 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="input-number"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
      for="input-inputNumber"
    >
      Input Number
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
      label="Input Number"
    >
      <input
        aria-describedby="helptext-inputNumber"
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input"
        id="input-inputNumber"
        maxlength="5"
        type="text"
        value="1234567890"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-197 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-198"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
        id="helptext-inputNumber"
      >
        some error
      </p>
    </div>
  </div>
</div>
`;

exports[`NumberInput UI Component should match snapshot with end adornment 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
    data-testid="input-number"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink="true"
      for="input-inputNumber"
    >
      Input Number
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
      label="Input Number"
    >
      <input
        aria-describedby="helptext-inputNumber"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        id="input-inputNumber"
        maxlength="5"
        type="text"
        value="1234567890"
      />
      <div
        class="MuiBox-root MuiBox-root-128"
      >
        <div>
          Typography Component
          <span>
            type = style-6
            children = some unit
          </span>
        </div>
      </div>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-129 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-130"
          style="width: 0px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      aria-live="polite"
    >
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="helptext-inputNumber"
      >
        A number
      </p>
    </div>
  </div>
</div>
`;
